<resources>
    <string name="app_name">Bliss</string>
    <string name="no_account">Don\'t have an Account?</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="logo">Logo</string>
    <string name="sign_up">Sign-Up</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="show">Show</string>
    <string name="bliss">bliss</string>
    <string name="gender">Gender</string>
    <string name="date">Date</string>
    <string name="picker">Picker</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="account_exists">Already have an Account?</string>
    <string name="search">Search</string>
    <string name="searchlabel">searchLabel</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="no_value">xx</string>
    <string name="no_date">xx ago</string>
    <string name="placeholder">lorem_ipsum</string>
    <string name="remines_button">Remines Button</string>
    <string name="diamonds_button">Diamonds Button</string>
    <string name="content">Content</string>
    <string name="placeholder_1">Lorem</string>
    <string name="no_perc">xx%</string>
    <string name="placeholder_2">Ipsum</string>
    <string name="placeholder_3">Dolor</string>
    <string name="placeholder_4">Sit</string>
    <string name="selected">Selected</string>
    <string name="followingNum"> xx Following</string>
    <string name="followersNum"> xx Followers</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</string>
    <string name="username_taken">Username Taken</string>
    <string name="email_taken">Email Taken</string>
    <string name="unfollow">Unfollow</string>
    <string name="follow">Follow</string>
    <string name="missing">Missing entries</string>
    <string name="hide">Hide</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="short_username">Username too short</string>
    <string name="weak_password">Password too weak</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="missing_birthday">Missing Birthday</string>
    <string name="not_matching_passwords">Passwords do not match</string>
    <string name="invalid_birthday">Invalid Birthday</string>
</resources>