<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/genderComp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:defaultFocusHighlightEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/upperMiddleBorder"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/dateComp">

        <EditText
            android:id="@+id/genderEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/gender"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#353535"
            android:textColorHint="#455A64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/genderShowTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing="0"
            android:minHeight="48dp"
            android:text="@string/show"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="#353535"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dateComp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:defaultFocusHighlightEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/genderComp"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordComp">

        <EditText
            android:id="@+id/dateEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/date"
            android:importantForAutofill="no"
            android:inputType="date|textPersonName"
            android:minHeight="48dp"
            android:textColor="#353535"
            android:textColorHint="#455A64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/dateShowTxt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/picker"
            android:minHeight="48dp"
            android:scaleX="0.7"
            android:scaleY="0.7"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/date_picker" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirmPasswordComp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:defaultFocusHighlightEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/dateComp"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/passwordComp">

        <EditText
            android:id="@+id/confirmPasswordEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textPassword"
            android:minHeight="48dp"
            android:textColor="#353535"
            android:textColorHint="#455A64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/confirmPasswordShowTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing="0"
            android:minHeight="48dp"
            android:text="@string/show"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="#353535"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/passwordComp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        android:defaultFocusHighlightEnabled="false"
        app:layout_constraintBottom_toTopOf="@+id/confirmPasswordComp"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/emailComp">

        <EditText
            android:id="@+id/passwordEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textPassword"
            android:minHeight="48dp"
            android:textColor="#353535"
            android:textColorHint="#455A64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/passwordShowTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:fontFamily="@font/inter_bold"
            android:letterSpacing="0"
            android:minHeight="48dp"
            android:text="@string/show"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:textColor="#353535"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUpCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/nameComp"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toTopOf="@+id/upperBorder">

        <TextView
            android:id="@+id/signInLabel"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/sign_up"
            android:textColor="#8000FF"
            android:textSize="48sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/blissStarsImg"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <ImageView
            android:id="@+id/blissStarsImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/bliss"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signInLabel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/bliss_stars"
            tools:ignore="ImageContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nameComp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        app:layout_constraintBottom_toTopOf="@+id/emailComp"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/signUpCenter">

        <EditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="#353535"
            android:textColorHint="#455A64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailComp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_bg"
        app:layout_constraintBottom_toTopOf="@+id/passwordComp"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/nameComp">

        <EditText
            android:id="@+id/emailEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/transparent"
            android:elegantTextHeight="true"
            android:ems="10"
            android:fontFamily="@font/inter_bold"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="#353535"
            android:textColorHint="#455A64"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upperBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07968575" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="37dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="37dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upperMiddleBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lowerMiddleBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/lowerBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signInBtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:elegantTextHeight="false"
        android:inputType="textPersonName"
        android:letterSpacing="0.01"
        android:onClick="signUp"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/noAccountCenter"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toTopOf="@+id/lowerMiddleBorder"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/noAccountCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/lowerBorder"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/signInBtn2">

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elegantTextHeight="false"
            android:fontFamily="@font/inter_medium"
            android:letterSpacing="0.01"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:textColor="#8000FF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noAccountText"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/noAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:background="@android:color/transparent"
            android:elegantTextHeight="false"
            android:fontFamily="@font/inter_light"
            android:letterSpacing="0.01"
            android:text="@string/account_exists"
            android:textColor="#70798C"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signUpBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>